service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-svc-ui
spec:
  selector:
    name: nexus-app
  ports:
    - port: 8081
      targetPort: 8081
      name: nexus-ui
    - port: 5000
      targetPort: 5000
      name: nexus-reg
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
spec:
  selector:
    name: nginx-web
  ports:
    - port: 80
      targetPort: 8080
      name: nginx-http
    - port: 443
      targetPort: 4430
      name: nginx-https
